<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="detailViewModel"
            type="com.badini.movie.ui.movieDetail.MovieDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.single_movie_details.SingleMovie">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="@{detailViewModel.isLoading ? View.VISIBLE : View.GONE}"/>

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Connection Problem!!"
                android:visibility="gone"/>

            <ScrollView
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/linearLayout">


                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/poster_placeholder"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="8dp">

                        <TextView
                            android:id="@+id/movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="movie"
                            android:textStyle="bold"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/movie_tagline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="sub title"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/infos_sur_le_film"
                            android:layout_marginTop="15dp"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/date_de_sortie"
                                android:textSize="12sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/movie_release_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="2019"
                                android:textSize="12sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/evaluation"
                                android:textSize="12sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/movie_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="8"
                                android:textSize="12sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/runtime"
                                android:textSize="12sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/movie_runtime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="2.3 hr"
                                android:textSize="12sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="Budget: "
                                android:textSize="12sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/movie_budget"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="130,000"
                                android:textSize="12sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/revenue"
                                android:textSize="12sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/movie_revenue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="130,000"
                                android:textSize="12sp"/>

                        </LinearLayout>





                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/overview"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/movie_overview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="overview ........."
                            android:textSize="12sp"/>

                    </LinearLayout>



                </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
